WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57759
Web Inspector: InspectorRuntimeAgent should not depend on Page
https://bugs.webkit.org/show_bug.cgi?id=57759
Summary
Web Inspector: InspectorRuntimeAgent should not depend on Page
Yury Semikhatsky
Reported
2011-04-04 09:28:43 PDT
Web Inspector: InspectorRuntimeAgent should not depend on inspected Page directly since there is no Page in workers.
Attachments
Patch
(8.24 KB, patch)
2011-04-04 09:50 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(7.99 KB, patch)
2011-04-04 10:28 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-04-04 09:50:02 PDT
Created
attachment 88070
[details]
Patch
Yury Semikhatsky
Comment 2
2011-04-04 10:28:32 PDT
Created
attachment 88076
[details]
Patch
Yury Semikhatsky
Comment 3
2011-04-04 10:33:22 PDT
Committed
r82845
: <
http://trac.webkit.org/changeset/82845
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug